Commit de départ

--- a/templates/projet_tutore/accueil.html.twig
+++ b/templates/projet_tutore/accueil.html.twig
@@ -1,7 +1,6 @@
 <h1>{{ title }}</h1>
 
-
-<p>Normalement, tu viens de GitHub !</p>
+<h2>Tu viens normalement du repo git</h2>
 
 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo 
 inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut 
