page accueil fonctionnelle

--- a/templates/projet_tutore/accueil.html.twig
+++ b/templates/projet_tutore/accueil.html.twig
@@ -1,4 +1,4 @@
-<h1>>{{title}}</h1>
+<h1>{{titre}}</h1>
 
 <p>Un test pour un première page !</p>
 <p>Ce projet à normalement été récuperé via GitHub !</p>
