--- a/templates/footer/footer.html.twig
+++ b/templates/footer/footer.html.twig
@@ -1,7 +1,17 @@
 {% block footer %}
 	<div class="footer">
 		<footer>
-			<h1> by AKNIOU Mehdi / DJERMOUNE Kemil / GIRON Maxence / GISONNI Sylvio / TOPALOVIC Ajdin </h1>
+			<h1> by 
+				<a href="https://www.linkedin.com/in/mehdi-akniou-0983b71a4/">AKNIOU Mehdi</a>
+				 / 
+				<a href="https://www.linkedin.com/in/kemil-djermoune-7a6086198/">DJERMOUNE Kemil</a>
+				 / 
+				<a href="https://www.linkedin.com/in/maxence-giron-0429a0186/">GIRON Maxence</a>
+				 / 
+				<a href="https://www.linkedin.com/in/sylvio-gisonni-813481200/">GISONNI Sylvio</a>
+				 / 
+				<a href="https://www.linkedin.com/in/mehdi-akniou-0983b71a4/">TOPALOVIC Ajdin</a>
+			</h1>
 		</footer>
 	</div>
 {% endblock %}
