creation de la page articles

--- a/templates/header/header.html.twig
+++ b/templates/header/header.html.twig
@@ -7,7 +7,7 @@
 				</div>
 
 				<nav>
-					<a href="#"> Articles </a>
+					<a href="/articles"> Articles </a>
 					<a href="#"> Créer </a>
 					<a href="#"> Modifier </a>
 					<a href="#"> Vue </a>
