--- a/templates/header/header.html.twig
+++ b/templates/header/header.html.twig
@@ -3,7 +3,7 @@
 		<header>
 			<div class="wrapper">
 				<div class="logo">
-					<a href="#"> Nom du Site </a>
+					<a href="/"> Nom du Site </a>
 				</div>
 
 				<nav>
