--- a/templates/header/header.html.twig
+++ b/templates/header/header.html.twig
@@ -8,7 +8,7 @@
 
 				<nav>
 					<a href="/articles"> Articles </a>
-					<a href="#"> Créer </a>
+					<a href="/articles/insert"> Créer </a>
 					<a href="#"> Modifier </a>
 					<a href="#"> Vue </a>
 				</nav>
