page de modification en cours de creation

--- a/templates/articles/update/updateArticle.html.twig
+++ b/templates/articles/update/updateArticle.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello NewArticleController!{% endblock %}
+{% block title %}Hello UpdateArticleController!{% endblock %}
 
 {% block body %}
     <div id='formUpdateArticle'>
