--- a/templates/header/header.html.twig
+++ b/templates/header/header.html.twig
@@ -10,7 +10,7 @@
 					<a href="/articles"> Articles </a>
 					<a href="/articles/insert"> Créer </a>
 					<a href="#"> Modifier </a>
-					<a href="#"> Vue </a>
+					<a href="/articles/delete"> Supprimer </a>
 				</nav>
 			</div>
 		</header>
