--- a/templates/articles/delete/deleteArticle.html.twig
+++ b/templates/articles/delete/deleteArticle.html.twig
@@ -3,18 +3,13 @@
 {% block title %}Hello DeleteArticleController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/mehdi/ProjetTutore2A/src/Controller/DeleteArticleController.php'|file_link(0) }}">src/Controller/DeleteArticleController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/mehdi/ProjetTutore2A/templates/delete_article/index.html.twig'|file_link(0) }}">templates/delete_article/index.html.twig</a></code></li>
-    </ul>
-</div>
+<table>
+{% for article in articles %}
+        <tr>
+            <td><div class="titreArticle"><h2>{{article.title}}</h2></div></td>
+            <td><div class="date">Ecrit le {{ article.createdAt | date('d/m/Y') }} à {{ article.createdAt | date('H:i') }}</div></td>
+            <td><a href="{{ path('article_delete', {'id': article.id}) }}">Supprimer</a></td>
+        </tr>
+{% endfor %}
+</table>
 {% endblock %}
