--- a/templates/header/header.html.twig
+++ b/templates/header/header.html.twig
@@ -7,10 +7,10 @@
 				</div>
 
 				<nav>
-					<a href="/articles"> Articles </a>
-					<a href="/articles/insert"> Créer </a>
-					<a href="/articles/update"> Modifier </a>
-					<a href="/articles/delete"> Supprimer </a>
+					<a href="{{ path('articles') }}"> Articles </a>
+					<a href="{{ path('insert') }}"> Créer </a>
+					<a href="{{ path('listeUpdate') }}"> Modifier </a>
+					<a href="{{ path('delete') }}"> Supprimer </a>
 				</nav>
 			</div>
 		</header>
