--- a/templates/articles/update/updateArticle.html.twig
+++ b/templates/articles/update/updateArticle.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/article/update/updateArticle.css') }}">
+{% endblock %}
+
 {% block body %}
     <div id='formUpdateArticle'>
         {{ form(form) }}
