--- a/templates/header/header.html.twig
+++ b/templates/header/header.html.twig
@@ -3,14 +3,14 @@
 		<header>
 			<div class="wrapper">
 				<div class="logo">
-					<a href="/"> Nom du Site </a>
+					<a href="/" class="hvr-underline"> Redaction d'Articles </a>
 				</div>
 
 				<nav>
-					<a href="{{ path('articles') }}"> Articles </a>
-					<a href="{{ path('insert') }}"> Créer </a>
-					<a href="{{ path('listeUpdate') }}"> Modifier </a>
-					<a href="{{ path('delete') }}"> Supprimer </a>
+					<a href="{{ path('articles') }}" class="hvr-underline"> Articles </a>
+					<a href="{{ path('insert') }}" class="hvr-underline"> Créer </a>
+					<a href="{{ path('listeUpdate') }}" class="hvr-underline"> Modifier </a>
+					<a href="{{ path('delete') }}" class="hvr-underline"> Supprimer </a>
 				</nav>
 			</div>
 		</header>
