--- a/templates/articles/articles.html.twig
+++ b/templates/articles/articles.html.twig
@@ -9,5 +9,5 @@
     <div class="date">Ecrit le {{ article.createdAt | date('d/m/Y') }} à {{ article.createdAt | date('H:i') }}</div>
     <div class="content"><p>{{ article.content }}</p></div>
 {% endfor %}
-
+{{ knp_pagination_render(articles) }}
 {% endblock %}
