--- a/templates/header/header.html.twig
+++ b/templates/header/header.html.twig
@@ -9,7 +9,7 @@
 				<nav>
 					<a href="{{ path('articles') }}" class="hvr-underline"> Articles </a>
 					<a href="{{ path('insert') }}" class="hvr-underline"> Créer </a>
-					<a href="{{ path('liste_articles') }}" class="hvr-underline"> Gerer </a>
+					<a href="{{ path('liste_articles') }}" class="hvr-underline"> Gérer </a>
 				</nav>
 			</div>
 		</header>
