--- a/templates/projet_tutore/accueil.html.twig
+++ b/templates/projet_tutore/accueil.html.twig
@@ -1,11 +1,15 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 
+<html>
+
 <h1>{{titre}}</h1>
 
 <p>Un test pour un première page !</p>
 <p>Ce projet à normalement été récuperé via GitHub !</p>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate eaque modi laborum voluptates consequatur repellendus fuga, ipsum maxime, architecto enim ullam excepturi quis. Sapiente qui distinctio dolor eos, fugiat sed molestiae fugit porro perspiciatis, eius ducimus nemo reprehenderit magni dolores.</p>
 <p>Nisi, quae. Suscipit, pariatur enim. Inventore natus assumenda, autem quidem iure repellat vitae quisquam molestiae fugiat ipsum asperiores tenetur temporibus, eaque sint, soluta omnis sequi doloribus commodi praesentium similique totam fugit corporis! Aspernatur illo in, eos voluptatum labore sed perferendis.</p>
+
+</html>
 
 {% endblock %}
