--- a/templates/articles/articles.html.twig
+++ b/templates/articles/articles.html.twig
@@ -10,7 +10,7 @@
     {% if article.updatedAt != NULL %}
         <div class="date">Modifié le {{ article.updatedAt | date('d/m/Y') }} à {{ article.updatedAt | date('H:i') }}</div>
     {% endif %}
-    <div class="content"><p>{{ article.content }}</p></div>
+    <div class="content"><p>{{ article.content | raw}}</p></div>
 {% endfor %}
 {{ knp_pagination_render(articles) }}
 {% endblock %}
