--- a/templates/articles/updateArticle.html.twig
+++ b/templates/articles/updateArticle.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <div id='formUpdateArticle'>
+    <div id='formInsertArticle'>
         {{ form(form) }}
     </div>
 {% endblock %}
