--- a/public/css/article/insert/insertArticle.css
+++ b/public/css/article/insert/insertArticle.css
@@ -39,7 +39,7 @@
     font-size: 18px;
     text-align: center;
     color: #fff;
-    background: #d2483c;
+    background: #191919;
     border: 0;
     border-radius: 5px;
     margin-top: 2%;
