--- a/templates/articles/articles.html.twig
+++ b/templates/articles/articles.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ArticlesController!{% endblock %}
+{% block title %}Nos différents Articles{% endblock %}
 
 {% block body %}
 
