--- a/templates/articles/updateArticle.html.twig
+++ b/templates/articles/updateArticle.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Modification Article{% endblock %}
+
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('css/article/update/updateArticle.css') }}">
 {% endblock %}
@@ -10,6 +12,7 @@
             <source src="images/video.mp4" type="video/mp4">
         </video>
         <div id='formUpdateArticle'>
+            <h1 id="titre">Modification d'un Article</h1> <br>
             {{ form(form) }}
         </div>
     </section>
