--- a/public/css/accueil/accueil.css
+++ b/public/css/accueil/accueil.css
@@ -2,8 +2,8 @@
     border: 1px solid #c4c4c4;
     border-radius: 2ch;
     padding: 2%;
-    margin-top: 105px;
-    margin-left: 23%;
+    margin: auto;
+    margin-top: 100px;
     width: 50%;
     height: 50%;
     background-color: white;
