--- a/public/css/article/gerer/gererArticles.css
+++ b/public/css/article/gerer/gererArticles.css
@@ -7,12 +7,17 @@
 .box {
     border: 1px solid #c4c4c4;
     border-radius: 2ch;
-    margin: 10px auto;
+    margin: 10px;
     width: 30%;
-    padding: 10px;
-    height: 100px;
+    padding: 20px;
+    height: 110px;
     background-color: white;
     box-shadow: 2px 2px 4px #beceff;
+    display: inline-block;
+}
+
+.date{
+    height:40px;
     display: inline-block;
 }
 
@@ -31,7 +36,7 @@
     padding: 3px;
     margin: auto;
     margin-top: 10px;
-    width: 20%;
+    width: 100px;
     cursor: pointer;
     display: inline-block;
 }
@@ -45,7 +50,7 @@
     padding: 3px;
     margin: auto;
     margin-top: 10px;
-    width: 20%;
+    width: 100px;
     cursor: pointer;
     display: inline-block;
 }
