ajout de paginator sur la page gerer

--- a/templates/articles/listeArticles.html.twig
+++ b/templates/articles/listeArticles.html.twig
@@ -30,6 +30,6 @@
                 </div>
             </div>
         {% endfor %}
-
     </section>
+    <div class="pagination"> <a class="page"{{ knp_pagination_render(articles) }}> </div>
 {% endblock %}
