--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,4 +2,16 @@
 
 {% block body %}
     <h1> Connexion </h1>
+
+    <form action="{{ path('security_login') }}" method="post">
+        <div class="">
+        <input placeholder = "Nom d'Utilisateur" required name="_username" type="text" class="">
+        </div>
+        <div class="">
+        <input placeholder = "Mot de Passe" required name="_password" type="password" class="">
+        </div>
+        <div class="">
+        <button type="submit">Connexion</button>
+        </div>
+    </form>
 {% endblock %}
