--- a/public/css/article/gerer/gererArticles.css
+++ b/public/css/article/gerer/gererArticles.css
@@ -50,6 +50,20 @@
     display: inline-block;
 }
 
+.exportBouton {
+    font-size: 15px;
+    text-align: center;
+    background: #5c72d4;
+    border: 0;
+    border-radius: 5px;
+    padding: 3px;
+    margin: auto;
+    margin-top: 10px;
+    width: 20%;
+    cursor: pointer;
+    display: inline-block;
+}
+
 .bouton {
     text-decoration: none;
     color: #fff;
