--- a/public/css/article/gerer/gererArticles.css
+++ b/public/css/article/gerer/gererArticles.css
@@ -64,7 +64,7 @@
     padding: 3px;
     margin: auto;
     margin-top: 10px;
-    width: 20%;
+    width: 100px;
     cursor: pointer;
     display: inline-block;
 }
@@ -86,3 +86,24 @@
     background: url(video.jpg) no-repeat;
     background-size: cover;
 }
+
+.pagination  {
+    display: inline-block;
+  }
+  
+.pagination a, .current{
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+}
+
+.current {
+    background-color: #4CAF50;
+    color: white;
+    border: 1px solid #4CAF50;
+}
+  
+.pagination a:hover {background-color: #ddd;}
