--- a/public/css/base.css
+++ b/public/css/base.css
@@ -7,3 +7,17 @@
 body {
     text-align: center;
 }
+
+#videofond {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    background-color: rgb(83, 83, 83);
+    background: url(video.jpg) no-repeat;
+    background-size: cover;
+}
