--- a/templates/articles/listeArticles.html.twig
+++ b/templates/articles/listeArticles.html.twig
@@ -8,11 +8,6 @@
 
 {% block body %}
     <section>
-
-        <video autoplay loop poster="video.jpg" id="videofond">
-            <source src="images/video.mp4" type="video/mp4">
-        </video>
-
         <h1 id="titre">Gérer les Articles</h1> <br>
 
         {% for article in articles %}
@@ -21,14 +16,14 @@
                 <div class="date">Ecrit le {{ article.createdAt | date('d/m/Y') }} à {{ article.createdAt | date('H:i') }}</div>
 
                 {% if article.updatedAt != NULL %}
-                    <div class="date">Modifié le {{ article.updatedAt | date('d/m/Y') }} à {{ article.updatedAt | date('H:i') }}</div>
+                    <div class="date">et modifié le {{ article.updatedAt | date('d/m/Y') }} à {{ article.updatedAt | date('H:i') }}</div>
                 {% endif %}
-
+<br>
                 <div class="modifBouton"><a class="bouton" href="{{ path('update', {'id': article.id}) }}">Modifier</a> </div>
                 <div class="supprBouton"><a class="bouton" href="{{ path('delete', {'id': article.id}) }}">Supprimer</a> </div>
                 <div class="exportBouton"><a class="bouton" href="{{ path('exportationXML', {'id': article.id}) }}">Exporter</a> </div>
             </div>
         {% endfor %}
     </section>
-    <div class="pagination"> <a class="page"{{ knp_pagination_render(articles) }}> </div>
+    <div class="pagination"> {{ knp_pagination_render(articles) }} </div>
 {% endblock %}
