--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,9 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        <video autoplay loop poster="video.jpg" id="videofond">
+            <source src="images/video.mp4" type="video/mp4">
+        </video>
         {% include 'header/header.html.twig' %}
         {% block body %}{% endblock %}
         {% include 'footer/footer.html.twig' %}
