--- a/templates/articles/articles.html.twig
+++ b/templates/articles/articles.html.twig
@@ -22,32 +22,13 @@
 
                 <div class="content"><p>{{ article.content | raw}}</p></div>
 
-                <button id="myBtn">Open Modal</button>
-                <div id="myModal" class="modal">
+                <button id="myBtn{{ article.id }}">Open Modal</button>
+                <div id="myModal{{ article.id }}" class="modal">
                 <div class="modal-content">
                     <span class="close">&times;</span>
-                    <p>Some text in the Modal..</p>
+                    <p>{{ article.content }}</p>
                 </div>
                 </div>
-
-                {% block javascripts %}
-                    <script type="text/javascript">
-                        var modal = document.getElementById("myModal");
-                        var btn = document.getElementById("myBtn");
-                        var span = document.getElementsByClassName("close")[0];
-                        btn.onclick = function() {
-                            modal.style.display = "block";
-                        }
-                        span.onclick = function() {
-                            modal.style.display = "none";
-                        }
-                        window.onclick = function(event) {
-                            if (event.target == modal) {
-                                modal.style.display = "none";
-                        }
-                        } 
-                    </script>
-                {% endblock %}
 
             </div>
         
@@ -56,4 +37,23 @@
         <div class="pagination"> {{ knp_pagination_render(articles) }}  </div>
 
     </section>
+{% endblock %}
+
+{% block javascripts %}
+    <script type="text/javascript">
+        var modal = document.getElementById("MyModal".{{ article.id }});
+        var btn = document.getElementById("myBtn".{{ article.id }});
+        var span = document.getElementsByClassName("close")[0];
+        btn.onclick = function() {
+            modal.style.display = "block";
+        }
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+        }
+        } 
+    </script>
 {% endblock %}
