--- a/templates/articles/articles.html.twig
+++ b/templates/articles/articles.html.twig
@@ -22,7 +22,7 @@
 
                 <div class="content"><p>{{ article.content | raw}}</p></div>
 
-                <button id="myBtn{{ article.id }}">Open Modal</button>
+                <button id="myBtn{{ article.id }}">Open modal</button>
                 <div id="myModal{{ article.id }}" class="modal">
                 <div class="modal-content">
                     <span class="close">&times;</span>
