--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -7,10 +7,10 @@
     {{ form_row(form.username, {'label' : ' ','attr': {'placeholder' : 'Nom d\'Utilisateur'}}) }}
     {{ form_row(form.name, {'label' : ' ','attr': {'placeholder' : 'Nom'}}) }}
     {{ form_row(form.email, {'label' : ' ','attr': {'placeholder' : 'Adresse Mail'}}) }}
-    {{ form_row(form.roles, {'label' : ' ','attr': {'placeholder' : 'Role'}}) }}
+    {{ form_row(form.roles, {'label' : ' '}) }}
     {{ form_row(form.password, {'label' : ' ','attr': {'placeholder' : 'Mot de Passe'}})  }}
     {{ form_row(form.confirm_password, {'label' : ' ','attr': {'placeholder' : 'Confirmer Mot de Passe'}})  }}
 
-    <button type="submit" class="btn btn-success">Inscription</button>
+    <button type="submit" class="">Inscription</button>
     {{ form_end(form) }}
 {% endblock %}
