ajout fixtures et lien dans le header

--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -35,7 +35,7 @@
                                     Administrateur
                                 {% elseif role == "ROLE_MODO" %}
                                     Modérateur
-                                {% elseif role == "ROLE_ADMIN" %}
+                                {% elseif role == "ROLE_USER" %}
                                     Utilisateur
                                 {% endif %}
                             {% endfor %}
